--- a/src/app/components/teacher-home/teacher-home.component.html
+++ b/src/app/components/teacher-home/teacher-home.component.html
@@ -1,66 +1,58 @@
+<div class="layout-sticky layout-sticky-subnav ">
+  <div class="preloader">
+    <div class="sk-chase">
+      <div class="sk-chase-dot"></div>
+      <div class="sk-chase-dot"></div>
+      <div class="sk-chase-dot"></div>
+      <div class="sk-chase-dot"></div>
+      <div class="sk-chase-dot"></div>
+      <div class="sk-chase-dot"></div>
+    </div>
 
-
-    <div class="layout-sticky layout-sticky-subnav ">
-        <div class="preloader">
-            <div class="sk-chase">
-                <div class="sk-chase-dot"></div>
-                <div class="sk-chase-dot"></div>
-                <div class="sk-chase-dot"></div>
-                <div class="sk-chase-dot"></div>
-                <div class="sk-chase-dot"></div>
-                <div class="sk-chase-dot"></div>
-            </div>
-
-            <!-- <div class="sk-bounce">
+    <!-- <div class="sk-bounce">
             <div class="sk-bounce-dot"></div>
             <div class="sk-bounce-dot"></div>
             </div> -->
-            <!-- More spinner examples at https://github.com/tobiasahlin/SpinKit/blob/master/examples.html -->
-        </div>
+    <!-- More spinner examples at https://github.com/tobiasahlin/SpinKit/blob/master/examples.html -->
+  </div>
 
-        <!-- Header Layout -->
-        <div class="mdk-header-layout js-mdk-header-layout">
-            <!-- Header Layout Content -->
-            <div class="mdk-header-layout__content">
-                <!-- Drawer Layout -->
-                <div class="mdk-drawer-layout js-mdk-drawer-layout"
-                     data-push
-                     data-responsive-width="992px">
-                    <!-- Drawer Layout Content -->
-                    <div class="mdk-drawer-layout__content page-content">
+  <!-- Header Layout -->
+  <div class="mdk-header-layout js-mdk-header-layout">
+    <!-- Header Layout Content -->
+    <div class="mdk-header-layout__content">
+      <!-- Drawer Layout -->
+      <div class="mdk-drawer-layout js-mdk-drawer-layout" data-push data-responsive-width="992px">
+        <!-- Drawer Layout Content -->
+        <div class="mdk-drawer-layout__content page-content">
+          <div class="page-section">
+            <div *ngIf="user | async as user" class="container page__container">
+              <div class="page-separator">
+                <div class="page-separator__text">Mis Cursos</div>
+              </div>
+              <div class="row card-group-row">
+                <div class="col-md-6 col-lg-4 col-xl-3 card-group-row__col"
+                  *ngFor="let clase of user.courses; index as i">
+                  <div *ngIf="(clase | clase | async) as class"
+                    class="card card-sm card--elevated p-relative o-hidden overlay overlay--primary-dodger-blue js-overlay card-group-row__card"
+                    data-trigger="click">
+                    <a href="profesor/{{clase | idClase}}" class="card-img-top js-image" data-position=""
+                      data-height="140">
+                      <img src="../../assets/images/paths/angular_430x168.png" alt="course">
+                    </a>
+                    <div class="card-body flex">
+                      <div class="d-flex">
+                        <div class="flex">
+                          <a class="card-title"
+                            href="profeosr/{{(clase | idClase)}}">{{ class.coursename }}</a>
+                          <small class="text-50 font-weight-bold mb-4pt"> {{ user.displayName }}</small>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
 
-                        <div class="page-section">
-                            <div class="container page__container">
-
-                                <div class="page-separator">
-                                    <div class="page-separator__text">Mis Cursos</div>
-                                </div>
-                                <div class="row card-group-row">
-
-                                    <div class="col-md-6 col-lg-4 col-xl-3 card-group-row__col" *ngFor="let clase of (user | async)?.courses; index as i">
-
-                                        <div class="card card-sm card--elevated p-relative o-hidden overlay overlay--primary-dodger-blue js-overlay card-group-row__card"
-                                             data-trigger="click">
-
-                                            <a href=" {{ (this.user| async)?.uid}}/{{(clase)}}"
-                                               class="card-img-top js-image"
-                                               data-position=""
-                                               data-height="140">
-                                                <img src="../../assets/images/paths/angular_430x168.png" alt="course">
-                                            </a>
-                                            <div class="card-body flex">
-                                                <div class="d-flex">
-                                                    <div class="flex">
-                                                        <a class="card-title" href=" {{ (this.user| async)?.uid}}/{{(clase)}}">{{this.Cursos['5th'][clase]}}</a>
-                                                        <small class="text-50 font-weight-bold mb-4pt"> {{ (this.user| async)?.displayName}}</small>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                    </div>
-                                </div>
-                                <!-- Pagination
+                </div>
+              </div>
+              <!-- Pagination
                                 <div class="mb-32pt">
 
                                     <ul class="pagination justify-content-start pagination-xsm m-0">
@@ -100,47 +92,14 @@
 
                                 </div>
                                 -->
-
-
-                            </div>
-                        </div>
-
-
-                    </div>
-                    <!-- // END drawer-layout__content -->
-
-
-                </div>
-                <!-- // END drawer-layout -->
-
             </div>
-            <!-- // END Header Layout Content -->
-
+          </div>
         </div>
-        <!-- // END Header Layout -->
-
-        <!-- jQuery -->
-        <script src="../../public/vendor/jquery.min.js"></script>
-
-        <!-- Bootstrap -->
-        <script src="../../public/vendor/popper.min.js"></script>
-        <script src="../../public/vendor/bootstrap.min.js"></script>
-
-        <!-- Perfect Scrollbar -->
-        <script src="../../public/vendor/perfect-scrollbar.min.js"></script>
-
-        <!-- DOM Factory -->
-        <script src="../../public/vendor/dom-factory.js"></script>
-
-        <!-- MDK -->
-        <script src="../../public/vendor/material-design-kit.js"></script>
-
-        <!-- App JS -->
-        <script src="../../public/js/app.js"></script>
-
-        <!-- Preloader -->
-        <script src="../../public/js/preloader.js"></script>
-
-        <!-- App Settings (safe to remove) -->
-        <!-- <script src="../../public/js/app-settings.js"></script> -->
+        <!-- // END drawer-layout__content -->
+      </div>
+      <!-- // END drawer-layout -->
     </div>
+    <!-- // END Header Layout Content -->
+  </div>
+  <!-- // END Header Layout -->
+</div>
