--- a/src/app/components/forum/forum.component.html
+++ b/src/app/components/forum/forum.component.html
@@ -1,242 +1,124 @@
 <div class="pt-32pt">
-  <div class="container page__container d-flex flex-column flex-md-row align-items-center text-center text-sm-left">
-      <div class="flex d-flex flex-column flex-sm-row align-items-center">
+    <div class="container page__container d-flex flex-column flex-md-row align-items-center text-center text-sm-left">
+        <div class="flex d-flex flex-column flex-sm-row align-items-center">
 
-          <div class="mb-24pt mb-sm-0 mr-sm-24pt">
-              <h2 class="mb-0">Discussions</h2>
+            <div class="mb-24pt mb-sm-0 mr-sm-24pt">
+                <h2 class="mb-0">Discussions</h2>
 
-              <ol class="breadcrumb p-0 m-0">
-                  <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                <ol class="breadcrumb p-0 m-0">
+                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
 
-                  <li class="breadcrumb-item active">
+                    <li class="breadcrumb-item active">
 
-                      Community
+                        Community
 
-                  </li>
+                    </li>
 
-              </ol>
+                </ol>
 
-          </div>
-      </div>
+            </div>
+        </div>
 
-  </div>
+    </div>
 </div>
 
 
 <div class="container page__container">
-  <div class="page-section">
+    <div class="page-section">
 
-      <div class="page-separator">
-          <div class="page-separator__text">Discussions</div>
-      </div>
+        <div class="page-separator">
+            <div class="page-separator__text">Discussions</div>
+        </div>
 
-      <div class="card">
-          <div class="card-header">
-              <div class="row align-items-center"
-                   style="white-space: nowrap;">
-                  <div class="col-lg-auto">
-                      <form class="search-form search-form--dark d-lg-inline-flex mb-8pt mb-lg-0"
-                            action="discussions.html">
-                          <input type="text"
-                                 class="form-control w-lg-auto"
-                                 placeholder="Search discussions">
-                          <button class="btn"
-                                  type="submit"><i class="material-icons">search</i></button>
-                      </form>
-                  </div>
-                  <div class="col-lg d-flex flex-wrap align-items-center">
-                      <div class="ml-lg-auto dropdown">
-                          <a href="#"
-                             class="btn btn-link dropdown-toggle text-70"
-                             data-toggle="dropdown">All Topics</a>
-                          <div class="dropdown-menu dropdown-menu-right">
-                              <a href=""
-                                 class="dropdown-item active">All Topics</a>
-                              <a href=""
-                                 class="dropdown-item">My Topics</a>
-                          </div>
-                      </div>
-                      <div class="dropdown mr-8pt">
-                          <a href="#"
-                             class="btn btn-link dropdown-toggle text-70"
-                             data-toggle="dropdown">Newest</a>
-                          <div class="dropdown-menu dropdown-menu-right">
-                              <a href=""
-                                 class="dropdown-item active">Newest</a>
-                              <a href=""
-                                 class="dropdown-item">Unanswered</a>
-                          </div>
-                      </div>
-                      <a href="discussions-ask.html"
-                         class="btn btn-accent">Ask a question</a>
-                  </div>
-              </div>
-          </div>
+        <div class="card">
+            <div class="card-header">
+                <div class="row align-items-center" style="white-space: nowrap;">
+                    <div class="col-lg-auto">
+                        <form class="search-form search-form--dark d-lg-inline-flex mb-8pt mb-lg-0" action="discussions.html">
+                            <input type="text" class="form-control w-lg-auto" placeholder="Search discussions">
+                            <button class="btn" type="submit"><i class="material-icons">search</i></button>
+                        </form>
+                    </div>
+                    <div class="col-lg d-flex flex-wrap align-items-center">
+                        <div class="ml-lg-auto dropdown">
+                            <a href="#" class="btn btn-link dropdown-toggle text-70" data-toggle="dropdown">All Topics</a>
+                            <div class="dropdown-menu dropdown-menu-right">
+                                <a href="" class="dropdown-item active">All Topics</a>
+                                <a href="" class="dropdown-item">My Topics</a>
+                            </div>
+                        </div>
+                        <div class="dropdown mr-8pt">
+                            <a href="#" class="btn btn-link dropdown-toggle text-70" data-toggle="dropdown">Newest</a>
+                            <div class="dropdown-menu dropdown-menu-right">
+                                <a href="" class="dropdown-item active">Newest</a>
+                                <a href="" class="dropdown-item">Unanswered</a>
+                            </div>
+                        </div>
+                        <a routerLink="/ask-question" class="btn btn-accent">Ask a question</a>
+                    </div>
+                </div>
+            </div>
 
-          <div class="list-group list-group-flush">
+            <div class="list-group list-group-flush">
 
-              <div *ngFor="let question of questions | async" class="list-group-item p-3">
-                  <div class="row align-items-start">
-                      <div class="col-md-3 mb-8pt mb-md-0">
-                          <div class="media align-items-center">
-                              <div class="media-left mr-12pt">
-                                  <a href=""
-                                     class="avatar avatar-sm">
-                                      <!-- <img src="LB" alt="avatar" class="avatar-img rounded-circle"> -->
-                                      <span class="avatar-title rounded-circle">LB</span>
-                                  </a>
-                              </div>
-                              <div class="d-flex flex-column media-body media-middle">
-                                  <h2 class="card-title">{{ question.madeby | userName | async }} </h2>
-                                  <small class="text-muted">2 days ago</small>
-                              </div>
-                          </div>
-                      </div>
-                      <div class="col mb-8pt mb-md-0">
-                          <p class="mb-8pt"><a href="discussion.html"
-                                 class="text-body"><strong>Using Angular HttpClientModule instead of HttpModule</strong></a></p>
+                <div *ngFor="let question of questions | async" class="list-group-item p-3">
+                    <div class="row align-items-start">
+                        <div class="col-md-3 mb-8pt mb-md-0">
+                            <div class="media align-items-center">
+                                <div class="media-left mr-12pt">
+                                    <a href="" class="avatar avatar-sm">
+                                        <!-- <img src="LB" alt="avatar" class="avatar-img rounded-circle"> -->
+                                        <span class="avatar-title rounded-circle">{{ (question.madeby | userName | async)?.charAt(0) }}</span>
+                                    </a>
+                                </div>
+                                <div class="d-flex flex-column media-body media-middle">
+                                    <h2 class="card-title">{{ question.madeby | userName | async }} </h2>
+                                    <small class="text-muted">2 days ago</small>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col mb-8pt mb-md-0">
+                            <p class="mb-8pt"><a routerLink="/forum/2020/4/{{question.id}}" class="text-body"><strong>{{ question.question }}</strong></a></p>
 
-                          <a href="discussion.html"
-                             class="chip chip-outline-secondary">Angular fundamentals</a>
+                            <a href="discussion.html" class="chip chip-outline-secondary">Angular fundamentals</a>
 
-                      </div>
-                      <div class="col-auto d-flex flex-column align-items-center justify-content-center">
-                          <h5 class="m-0">1</h5>
-                          <p class="lh-1 mb-0"><small class="text-70">answers</small></p>
-                      </div>
-                  </div>
-              </div>
+                        </div>
+                        <div class="col-auto d-flex flex-column align-items-center justify-content-center">
+                            <h5 class="m-0">{{ question.answers.length }}</h5>
+                            <p class="lh-1 mb-0"><small class="text-70">answers</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-              <!-- <div class="list-group-item p-3">
-                  <div class="row align-items-start">
-                      <div class="col-md-3 mb-8pt mb-md-0">
-                          <div class="media align-items-center">
-                              <div class="media-left mr-12pt">
-                                  <a href=""
-                                     class="avatar avatar-sm">
-                                      <img src="AC" alt="avatar" class="avatar-img rounded-circle">
-                                      <span class="avatar-title rounded-circle">AC</span>
-                                  </a>
-                              </div>
-                              <div class="d-flex flex-column media-body media-middle">
-                                  <a href=""
-                                     class="card-title">Adam Curtis</a>
-                                  <small class="text-muted">3 days ago</small>
-                              </div>
-                          </div>
-                      </div>
-                      <div class="col mb-8pt mb-md-0">
-                          <p class="mb-0"><a href="discussion.html"
-                                 class="text-body"><strong>Why am I getting an error when trying to install angular/http@2.4.2</strong></a></p>
+            <div class="card-footer">
 
-                      </div>
-                      <div class="col-auto d-flex flex-column align-items-center justify-content-center">
-                          <h5 class="m-0">1</h5>
-                          <p class="lh-1 mb-0"><small class="text-70">answers</small></p>
-                      </div>
-                  </div>
-              </div>
+                <ul class="pagination justify-content-start pagination-xsm m-0">
+                    <li class="page-item disabled">
+                        <a class="page-link" href="#" aria-label="Previous">
+                            <span aria-hidden="true" class="material-icons">chevron_left</span>
+                            <span>Prev</span>
+                        </a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Page 1">
+                            <span>1</span>
+                        </a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Page 2">
+                            <span>2</span>
+                        </a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Next">
+                            <span>Next</span>
+                            <span aria-hidden="true" class="material-icons">chevron_right</span>
+                        </a>
+                    </li>
+                </ul>
 
-              <div class="list-group-item p-3">
-                  <div class="row align-items-start">
-                      <div class="col-md-3 mb-8pt mb-md-0">
-                          <div class="media align-items-center">
-                              <div class="media-left mr-12pt">
-                                  <a href=""
-                                     class="avatar avatar-sm">
-                                      <img src="EH" alt="avatar" class="avatar-img rounded-circle">
-                                      <span class="avatar-title rounded-circle">EH</span>
-                                  </a>
-                              </div>
-                              <div class="d-flex flex-column media-body media-middle">
-                                  <a href=""
-                                     class="card-title">Emilie Howard</a>
-                                  <small class="text-muted">4 days ago</small>
-                              </div>
-                          </div>
-                      </div>
-                      <div class="col mb-8pt mb-md-0">
-                          <p class="mb-0"><a href="discussion.html"
-                                 class="text-body"><strong>Using Angular HttpClientModule instead of HttpModule</strong></a></p>
-
-                      </div>
-                      <div class="col-auto d-flex flex-column align-items-center justify-content-center">
-                          <h5 class="m-0">1</h5>
-                          <p class="lh-1 mb-0"><small class="text-70">answers</small></p>
-                      </div>
-                  </div>
-              </div>
-
-              <div class="list-group-item p-3">
-                  <div class="row align-items-start">
-                      <div class="col-md-3 mb-8pt mb-md-0">
-                          <div class="media align-items-center">
-                              <div class="media-left mr-12pt">
-                                  <a href=""
-                                     class="avatar avatar-sm">
-                                      <img src="JK" alt="avatar" class="avatar-img rounded-circle">
-                                      <span class="avatar-title rounded-circle">JK</span>
-                                  </a>
-                              </div>
-                              <div class="d-flex flex-column media-body media-middle">
-                                  <a href=""
-                                     class="card-title">Jason Klein</a>
-                                  <small class="text-muted">6 days ago</small>
-                              </div>
-                          </div>
-                      </div>
-                      <div class="col mb-8pt mb-md-0">
-                          <p class="mb-0"><a href="discussion.html"
-                                 class="text-body"><strong>Why am I getting an error when trying to install angular/http@2.4.2</strong></a></p>
-
-                      </div>
-                      <div class="col-auto d-flex flex-column align-items-center justify-content-center">
-                          <h5 class="m-0">1</h5>
-                          <p class="lh-1 mb-0"><small class="text-70">answers</small></p>
-                      </div>
-                  </div>
-              </div> -->
-
-          </div>
-
-          <div class="card-footer">
-
-              <ul class="pagination justify-content-start pagination-xsm m-0">
-                  <li class="page-item disabled">
-                      <a class="page-link"
-                         href="#"
-                         aria-label="Previous">
-                          <span aria-hidden="true"
-                                class="material-icons">chevron_left</span>
-                          <span>Prev</span>
-                      </a>
-                  </li>
-                  <li class="page-item">
-                      <a class="page-link"
-                         href="#"
-                         aria-label="Page 1">
-                          <span>1</span>
-                      </a>
-                  </li>
-                  <li class="page-item">
-                      <a class="page-link"
-                         href="#"
-                         aria-label="Page 2">
-                          <span>2</span>
-                      </a>
-                  </li>
-                  <li class="page-item">
-                      <a class="page-link"
-                         href="#"
-                         aria-label="Next">
-                          <span>Next</span>
-                          <span aria-hidden="true"
-                                class="material-icons">chevron_right</span>
-                      </a>
-                  </li>
-              </ul>
-
-              <!-- <ul class="pagination justify-content-center pagination-sm">
+                <!-- <ul class="pagination justify-content-center pagination-sm">
 <li class="page-item disabled">
 <a class="page-link" href="#" aria-label="Previous">
 <span aria-hidden="true" class="material-icons">chevron_left</span>
@@ -260,8 +142,8 @@
 </a>
 </li>
 </ul> -->
-              <!-- <a href="" class="text-70 text-underline">View more discussions</a> -->
-          </div>
-      </div>
-  </div>
+                <!-- <a href="" class="text-70 text-underline">View more discussions</a> -->
+            </div>
+        </div>
+    </div>
 </div>
